# snake-royale

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  compose.yaml  docker-compose.yml  openapi.yaml  package.json
.github/workflows/: ci-cd.yml
backend/: README.md  pyproject.toml
backend/app/: __init__.py  auth.py  main.py  models.py  security.py  store.py
backend/app/routers/: active_games.py  auth.py  scores.py
backend/tests/: conftest.py  test_active_games.py  test_auth.py  test_frontend_fallback.py  test_scores.py  test_store.py
backend/tests_integration/: conftest.py  test_auth_score_leaderboard_flow.py
docs/: deploy-aws-cloudformation.md  deploy-koyeb-neon.md
frontend/: package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/scripts/: prerender-static-shell.mjs
frontend/src/: routeTree.gen.ts  styles.css
frontend/src/components/: SnakeBoard.tsx
frontend/src/lib/snake/: engine.ts
frontend/src/routes/: __root.tsx  auth.tsx  index.tsx  leaderboard.tsx  play.tsx  watch.$gameId.tsx  watch.tsx
frontend/src/services/: http.test.ts  http.ts  index.ts  types.ts
infra/: cloudformation.yaml
scripts/: aws-deploy.sh  aws-update.sh  dev.sh
src/: routeTree.gen.ts
src/components/: SnakeBoard.tsx
src/hooks/: useAuth.tsx
src/lib/snake/: engine.test.ts
src/services/: mock.test.ts  mock.ts
src/test/: setup.ts
