[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for Snake Royale"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.0",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
]
